--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ body {
 	
 }
 
+.block-photo {
+	display:block;
+	
+}
+
 .text-hidden {
 	display: none;
 	
@@ -30,33 +35,69 @@ body {
   margin: 0 auto;
   padding: 0 10px;
 }
+.main-header {
+	   background-color:#000000;
+	
+}
 
 .main-header-layout {
   display: flex;
   justify-content: space-between;
+	min-height:72px;
+	align-items:center;
+	
+	
 }
 
+.main-header-layout a{
+	text-decoration: none;
+	color:white;
+	font-size: 16px;
+	line-height:20px;
+	
+}
 
 .main-navigation {
-  width: 780px;
+  width: 690px;
 	display: flex;
-	justify-content: space-around;
-	align-content:flex-end;
+	justify-content: space-between;
+	
 
   /* Только для оформления сетки */
-  min-height: 72px;
+  
 }
 
 .main-navigation ul {
+	padding:0;
 	display: flex;
-	width:540px;
-	justify-content: space-around;
-	align-content:center;
+	width:505px;
+	justify-content: space-between;
+	list-style: none;
+	margin-right:16px;
+	
+	
 }
 
+
+.logo-header {
+	margin-left:18px;
+	
+}
+
+
 .user-block {
-  width: 140px;
+  width: 75px;
+	text-align:right;
+	margin-right:21px;
+	
+	
+	
 
   /* Только для оформления сетки */
-  min-height: 70px;
+  
+}
+.user-block a{
+	display:block;
+	background:  url("../img/entericon.png") no-repeat 10px  50%;
+	
 }
