--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,99 @@ body {
 	background:  url("../img/entericon.png") no-repeat 10px  50%;
 	
 }
+
+.title {
+	display:block;
+	font-size: 30px;
+	line-height:42px;
+	margin-top:50px;
+	margin-bottom:0;
+	}
+
+.breadcrumbs {
+	display:flex;
+	justify-content: space-between;
+	list-style: none;
+	width:300px;	
+	padding:0;
+	align-items:center;
+	}
+
+.breadcrumbs a {
+	text-decoration: none;
+	}	
+	
+.rhomb{
+  width: 8px;
+  height: 8px;
+  background: #000000;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+
+}
+
+.main-content {
+	display:flex;
+	color:red;
+	
+}
+.main-content fieldset{
+	border:none;
+	margin:0;
+	padding:0;
+	
+}
+
+.main-content legend{
+	padding:0;
+	font-size: 24px;
+	line-height:30px;
+	
+	
+}
+
+.main-content ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	
+}
+
+
+
+.main-content input[type="checkbox"],
+.main-content input[type="radio"]
+ {
+    display:none;            
+}
+
+.main-content input[type="checkbox"] + label, 
+.main-content input[type="radio"] + label{
+  cursor: pointer;
+}
+
+.main-content input[type="checkbox"] + label::before
+ {
+    content: "";
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+		background-repeat: no-repeat;
+		vertical-align: middle;
+		border: solid 2px black;
+		background-position: 50% 50%;
+		
+}
+
+.main-content input[type="checkbox"]:checked + label::before {
+	background-image: url(../img/xicon.png);
+	
+}
+
+.main-content input[type="checkbox"]:disabled + label::before {
+    background-image: none;
+}
+
